# aegis

./: .gitignore  AEGIS_TECHNICAL_BRIEF.md  Makefile  README.md
backend/: .env.example  gen_api_key.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: account.py  builder.py  health.py  intelligence.py  onboarding.py  sentiment.py  vault.py
backend/app/api/websocket/: events.py
backend/app/core/: agent_key.py  config.py  encryption.py  logging.py  middleware.py  redis.py
backend/app/models/: pacifica.py  risk.py  vault.py
backend/app/services/: orchestrator.py
backend/app/services/elfa/: client.py
backend/app/services/execution/: engine.py
backend/app/services/fuul/: client.py
backend/app/services/pacifica/: client.py  signing.py  ws_monitor.py
backend/app/services/risk/: engine.py
backend/app/services/vault/: manager.py
backend/app/utils/: decimal_utils.py
backend/tests/integration/: conftest.py  test_failure_scenarios.py  test_risk_execution_cycle.py
backend/tests/unit/: test_decimal_utils.py  test_elfa_client.py  test_encryption.py  test_risk_edge_cases.py  test_risk_engine.py  test_signing.py  test_signing_failures.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/hooks/: useAegisWebSocket.ts  useDevModeSimulation.ts  usePhantomConnect.ts  useSolanaWallet.ts  useWsEventNotifications.ts
frontend/src/lib/: fuul.ts  signing.test.ts  signing.ts
(+25 files in other folders)
